# progressos-bot

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  dependency-audit.yml
docs/: AI_CONTRACT.md  DEPLOYMENT.md  NEXT_PHASES.md  PHASES.md  PROGRESSOS_API_CONTRACT.md  PROGRESSOS_API_RESEARCH.md  PYTHON_ENGINEERING_GUIDE.md  RELEASE_CHECKLIST.md  ROADMAP.md  RULES.md  SECURITY.md
src/progressos_bot/: __init__.py  bot.py  config.py  identity.py  logging.py  main.py  pending.py  progressos_client.py  retry_queue.py  retry_queue_cli.py  schemas.py  version.py  webhook.py
src/progressos_bot/ai/: __init__.py  evaluation.py  evaluation_main.py  groq_client.py  parser.py  prompts.py  structured_schema.py
tests/: test_admin.py  test_bot_authorization.py  test_bot_guided_capture.py  test_capture_flow.py  test_channel_contracts.py  test_cli_channel_adapter.py  test_config.py  test_core_identity.py  test_error_reporting.py  test_groq_client.py  test_guided_capture.py  test_identity.py  test_input_guard.py  test_logging.py  test_message_parser.py  test_metrics.py  test_parser_evaluation.py  test_payload_validation.py  test_pending.py  test_progressos_client.py  test_rate_limit.py  test_read_commands.py  test_redaction.py  test_retry_queue.py  test_structured_schema.py  test_version.py  test_web_chat_channel_adapter.py  test_web_chat_route.py  test_webhook.py
tests/fixtures/: llm_security_evaluation.json  parser_evaluation.json
(+23 files in other folders)
